main.css
:root {
    --color-angle: -45deg;
    --callout-color: #f3e9ae;
    --disabled-opacity: 0.6;
    --semi-black: #191919;
    --wave-border-x: 15px;
    --wave-border-y: 255px;
}

html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.fill-container {
    flex-grow: 1;
    border: none;
    margin: 0;
    padding: 0;
}

.paint-text {
    font-family: 'Luckiest Guy';
    font-weight: bold;
    background: linear-gradient(var(--color-angle),
        red, red 14.28%,
        orange 14.28%, orange 28.57%,
        yellow 28.57%, yellow 42.86%,
        #00e20b 42.86%, #00e20b 57.14%,
        cyan 57.14%, cyan 71.42%,
        #0059ff 71.42%, #0059ff 85.71%,
        violet 85.71%
    );
    background-size: 9% 43%;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.wave-border {
    /* shout out to https://ldjam.com/events/ludum-dare/46/this-website-will-self-destruct-dot-com for this */
    border: 2px solid black;
    border-bottom-left-radius: var(--wave-border-x) var(--wave-border-y);
    border-bottom-right-radius: var(--wave-border-y) var(--wave-border-x);
    border-top-left-radius: var(--wave-border-y) var(--wave-border-x);
    border-top-right-radius: var(--wave-border-x) var(--wave-border-y);
}

.callout {
    padding: 0.3vh;
    box-shadow: inset 0 -2px 4px 0 rgba(0, 0, 0, 0.1);
    text-align: center;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}
.callout .title {
    background-color: var(--callout-color);
    padding: 0.1rem 0.3rem 0;
    font-size: 5.4vw;
    letter-spacing: -0.2vw;
    -webkit-text-stroke: 0.2vh black;
}
@media (min-width: 1200px) {
    .callout .title {
        font-size: 2.5vw;
        -webkit-text-stroke-width: 0.12vw;
        letter-spacing: -0.1vw;
    }
}
.callout .title span {
    display: inline-block;
    background-size: 170% 170%;
}

.overlay {
    position: absolute;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    opacity: 0;
    background: rgba(0, 0, 0, 0.25);
    transition: 0.25s opacity;
    pointer-events: none;
}
.overlay:target {
    opacity: 1;
    pointer-events: all;
}
.overlay:target ~ .callout {
    display: none;
}

.overlay-close {
    position: absolute;
    width: 100vw;
    height: 100vh;
    z-index: 0;
}

.overlay-content {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 21% 1fr;
    grid-template-areas:
        "intro"
        "panel"
        ;

    width: 100%;
    height: 88%;
    z-index: 10;

    font-family: 'Luckiest Guy';
    color: white;
    --font-size: calc(1.2vw + 0.9vh);
    font-size: var(--font-size);
    -webkit-text-stroke: calc(var(--font-size)*0.05) black;
}
@media (min-width: 600px) {
    .overlay-content {
        align-self: center;
        width: 56vh;
        height: 96%;
        --font-size: calc(1.6vh);
    }
}

.draw-intro {
    position: relative;
    grid-area: intro;
    margin: 0.5rem 1.2rem 0.7vh;
    padding: 0.3rem;
    padding-top: 0.4rem;
    background: var(--callout-color);
    color: var(--semi-black);
    -webkit-text-stroke: 0;
    white-space: pre-wrap;
}
.draw-x {
    position: absolute;
    background: var(--callout-color);
    right: -1%;
    top: -6%;
    width: 1.3vh;
    height: 1.5vh;
    padding-left: 0.3vh;
    padding-top: 0.1vh;
    padding-bottom: 0.1vh;
    font-size: 1.5vh;
    line-height: 1.8vh;
    user-select: none;
    --wave-border-x: 4px;
    --wave-border-y: 12px;
}
.draw-panel {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 0.2rem;
    margin-bottom: 0.4rem;
    grid-area: panel;
    padding: 0.6rem;
    padding-bottom: 0.2rem;
    white-space: pre-wrap;
    transition: 0.2s background-color;
    --wave-border-x: 86px;
    --wave-border-y: 9px;
}
@media (min-width: 600px) {
}

.draw-full-name {
    padding: 0.2rem 0.8rem 0rem;
    width: 80%;
    margin-bottom: 0.6rem;
    text-align: center;
    color: var(--semi-black);
    font-family: 'Luckiest Guy';
    font-size: 160%;
    letter-spacing: 1px;
    -webkit-text-stroke: 0;
}

.colors {
    display: flex; /* need to do a wrapped flex due to weird grid behavior on ios */
    flex-wrap: wrap;
    margin-bottom: 0.2rem;
    width: 100%;
    height: 12%;
    gap: 2px;
}
.colors div {
    border: 2px solid black;
    cursor: pointer;
    box-sizing: border-box;
    width: calc(12.5% - 2px);
    margin: 1px;
}
.colors div.selected {
    border-style: dashed;
}

.controls {
    display: flex;
    align-self: stretch;
    margin-bottom: 0.6rem;
    height: 5%;
    align-items: baseline;
}
.border-button {
    height: 100%;
    width: 10%;
    box-sizing: border-box;
    border: 1vh solid white;
    box-shadow: 0 0 0 2px black;
    background-color: black;
    margin: 0 0.2rem;
    cursor: pointer;
    opacity: var(--disabled-opacity);
    transition: opacity 0.3s;
}
.border-button.selected {
    opacity: 1;
    cursor: default;
}
.border-button.tiny { border-top-width: 1.55vh; border-bottom-width: 1.55vh; }
.border-button.small { border-top-width: 1.3vh; border-bottom-width: 1.3vh; }
.border-button.medium { border-top-width: 1.05vh; border-bottom-width: 1.05vh; }
.border-button.large { border-top-width: 0.65vh; border-bottom-width: 0.65vh; }

.img-button {
    height: 100%;
    width: 10%;
    margin: 0 0.2rem;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50%;
    background-color: black;
    cursor: pointer;
    transition: opacity 0.3s;
}
.img-button.disabled {
    opacity: var(--disabled-opacity);
    cursor: default;
}
.img-button.undo {
    background-image: url('img/undo.png');
}
.img-button.redo {
    background-image: url('img/undo.png');
    transform: scaleX(-1);
}
.img-button.clear {
    background-image: url('img/clear.png');
}

@media (min-width : 600px) {
    .border-button {
        width: 5.3vh;
    }
    .img-button {
        width: 5.3vh;
    }
}

.canvas-resize-helper {
    position: relative;
    width: 100%;
    flex-grow: 1;
    margin-bottom: 0.6rem;
}

.canvas-container {
    position: absolute !important;
    width: 100% !important;
    height: 100% !important;
    top: 0 !important;
    background-color: white;
    transition: 0.5s background-color ease-out;
}
.canvas-container.disable-draw {
    pointer-events: none !important;
}

.submit-button {
    padding: 0 1rem;
    color: var(--semi-black);
    background-color: white;
    margin-bottom: 0.4rem;
    font-size: calc(1.2 * var(--font-size));
    height: calc(2.5 * var(--font-size));
}
.submit-button[disabled] {
    opacity: var(--disabled-opacity);
}

.submit-message {
}

